--- a/scripts/README
+++ b/scripts/README
@@ -1,5 +1,7 @@
 --Various references and commands--
 
+git rm --cached scripts/temp/x10_log_last_position.txt
+
 dos2unix update_repo.sh
 sh /var/www/html/homeio/scripts/update_repo.sh "Comment"
 
