added vesync processor service

--- a/scripts/README
+++ b/scripts/README
@@ -6,11 +6,13 @@ dos2unix update_repo.sh
 sh /var/www/html/homeio/scripts/update_repo.sh ""
 
 ///manually run a service process
+python3 /var/www/html/homeio/scripts/vesync_processor.py
 php /var/www/html/homeio/scripts/govee_processor.php
 php /var/www/html/homeio/scripts/hue_processor.php
 php /var/www/html/homeio/scripts/x10_monitor.php
  
 //edit the services
+sudo nano /etc/systemd/system/vesync-processor.service
 sudo nano /etc/systemd/system/govee-processor.service
 sudo nano /etc/systemd/system/hue-processor.service
 sudo nano /etc/systemd/system/x10-monitor.service
@@ -19,21 +21,41 @@ sudo nano /etc/systemd/system/x10-monitor.service
 sudo systemctl daemon-reload
 
 //start/restart a service
+sudo service vesync-processor restart
 sudo service govee-processor restart
 sudo service hue-processor restart
 sudo service x10-monitor restart
-sudo service govee-processor restart && sudo service hue-processor restart && sudo service x10-monitor restart
+sudo service vesync-processor restart && sudo service govee-processor restart && sudo service hue-processor restart && sudo service x10-monitor restart
 
 //monitor a service
+sudo service vesync-processor status
 sudo service govee-processor status
 sudo service hue-processor status
 sudo service x10-monitor status
 
 //stop a service
+sudo service vesync-processor stop
 sudo service govee-processor stop
 sudo service hue-processor stop
 sudo service x10-monitor stop
-sudo service govee-processor stop && sudo service hue-processor stop && sudo service x10-monitor stop
+sudo service vesync-processor stop && sudo service govee-processor stop && sudo service hue-processor stop && sudo service x10-monitor stop
+
+//contents of etc/systemd/system/vesync_processor.service
+[Unit]
+Description=VeSync Command Processor
+After=network.target mysql.service
+
+[Service]
+Type=simple
+User=www-data
+Group=www-data
+ExecStart=/usr/bin/php /var/www/html/homeio/scripts/vesync_processor.py
+Restart=always
+RestartSec=3
+
+[Install]
+WantedBy=multi-user.target
+//file end
 
 //contents of etc/systemd/system/govee-processor.service
 [Unit]
@@ -69,7 +91,7 @@ RestartSec=3
 WantedBy=multi-user.target
 //file end
 
-//contents of etc/systemd/system/x10_monitor.php
+//contents of etc/systemd/system/x10_monitor.service
 [Unit]
 Description=Govee Command Processor
 After=network.target mysql.service
@@ -78,7 +100,7 @@ After=network.target mysql.service
 Type=simple
 User=www-data
 Group=www-data
-ExecStart=/usr/bin/php /var/www/html/homeio/scripts/x10_monitor.php
+ExecStart=python3 /var/www/html/homeio/scripts/x10_monitor.php
 Restart=always
 RestartSec=3
 
