--- a/scripts/README
+++ b/scripts/README
@@ -6,18 +6,18 @@ dos2unix update_repo.sh
 sh /var/www/html/homeio/scripts/update_repo.sh ""
 
 ///manually run a service process
-python3 /var/www/html/homeio/scripts/vesync_processor.py
 php /var/www/html/homeio/scripts/govee_processor.php
 php /var/www/html/homeio/scripts/hue_processor.php
+python3 /var/www/html/homeio/scripts/vesync_processor.py
 php /var/www/html/homeio/scripts/x10_monitor.php
 
 php /var/www/html/homeio/scripts/govee_updater.php
 php /var/www/html/homeio/scripts/hue_updater.php
  
 //edit the services
-sudo nano /etc/systemd/system/vesync-processor.service
 sudo nano /etc/systemd/system/govee-processor.service
 sudo nano /etc/systemd/system/hue-processor.service
+sudo nano /etc/systemd/system/vesync-processor.service
 sudo nano /etc/systemd/system/x10-monitor.service
 
 sudo nano /etc/systemd/system/govee-updater.service
@@ -27,33 +27,33 @@ sudo nano /etc/systemd/system/hue-updater.service
 sudo systemctl daemon-reload
 
 //start/restart a service
-sudo service vesync-processor restart
 sudo service govee-processor restart
 sudo service hue-processor restart
+sudo service vesync-processor restart
 sudo service x10-monitor restart
 
 sudo service govee-updater restart
 sudo service hue-updater restart
-sudo service vesync-processor restart && sudo service govee-processor restart && sudo service hue-processor restart && sudo service x10-monitor restart && sudo service govee-updater restart && sudo service hue-updater restart
+sudo service govee-processor restart && sudo service hue-processor restart && sudo service vesync-processor restart && sudo service x10-monitor restart && sudo service govee-updater restart && sudo service hue-updater restart
 
 //monitor a service
-sudo service vesync-processor status
 sudo service govee-processor status
 sudo service hue-processor status
+sudo service vesync-processor status
 sudo service x10-monitor status
 
 sudo service govee-updater status
 sudo service hue-updater status
 
 //stop a service
-sudo service vesync-processor stop
 sudo service govee-processor stop
 sudo service hue-processor stop
+sudo service vesync-processor stop
 sudo service x10-monitor stop
 
 sudo service govee-updater stop
 sudo service hue-updater stop
-sudo service vesync-processor stop && sudo service govee-processor stop && sudo service hue-processor stop && sudo service x10-monitor stop && sudo service govee-updater stop & sudo service hue-updater stop
+sudo service govee-processor stop && sudo service hue-processor stop && sudo service vesync-processor stop && sudo service x10-monitor stop && sudo service govee-updater stop & sudo service hue-updater stop
 
 //contents of etc/systemd/system/govee-processor.service
 [Unit]
