--- a/scripts/README
+++ b/scripts/README
@@ -1,7 +1,5 @@
 --Various references and commands--
 
-git rm --cached scripts/temp/x10_log_last_position.txt
-
 dos2unix update_repo.sh
 sh /var/www/html/homeio/scripts/update_repo.sh ""
 
@@ -9,7 +7,6 @@ sh /var/www/html/homeio/scripts/update_repo.sh ""
 php /var/www/html/homeio/scripts/govee_processor.php
 php /var/www/html/homeio/scripts/hue_processor.php
 python3 /var/www/html/homeio/scripts/vesync_processor.py
-php /var/www/html/homeio/scripts/x10_monitor.php
 
 php /var/www/html/homeio/scripts/ble_remote_monitor.php
 php /var/www/html/homeio/scripts/govee_updater.php
@@ -19,7 +16,6 @@ php /var/www/html/homeio/scripts/hue_updater.php
 sudo nano /etc/systemd/system/govee-processor.service
 sudo nano /etc/systemd/system/hue-processor.service
 sudo nano /etc/systemd/system/vesync-processor.service
-sudo nano /etc/systemd/system/x10-monitor.service
 
 sudo nano /etc/systemd/system/ble-remote-monitor.service
 sudo nano /etc/systemd/system/govee-updater.service
@@ -38,13 +34,12 @@ sudo service ble-remote-monitor restart
 sudo service govee-updater restart
 sudo service hue-updater restart
 
-sudo service ble-remote-monitor restart && sudo service govee-processor restart && sudo service hue-processor restart && sudo service vesync-processor restart && sudo service x10-monitor restart && sudo service govee-updater restart && sudo service hue-updater restart
+sudo service ble-remote-monitor restart && sudo service govee-processor restart && sudo service hue-processor restart && sudo service vesync-processor restart && sudo service govee-updater restart && sudo service hue-updater restart
 
 //monitor a service
 sudo service govee-processor status
 sudo service hue-processor status
 sudo service vesync-processor status
-sudo service x10-monitor status
 
 sudo service ble-remote-monitor status
 sudo service govee-updater status
@@ -54,13 +49,12 @@ sudo service hue-updater status
 sudo service govee-processor stop
 sudo service hue-processor stop
 sudo service vesync-processor stop
-sudo service x10-monitor stop
 
 sudo service ble-remote-monitor stop
 sudo service govee-updater stop
 sudo service hue-updater stop
 
-sudo service ble-remote-monitor stop && sudo service govee-processor stop && sudo service hue-processor stop && sudo service vesync-processor stop && sudo service x10-monitor stop && sudo service govee-updater stop & sudo service hue-updater stop
+sudo service ble-remote-monitor stop && sudo service govee-processor stop && sudo service hue-processor stop && sudo service vesync-processor stop && sudo service govee-updater stop & sudo service hue-updater stop
 
 //contents of etc/systemd/system/ble-remote-monitor.service
 [Unit]
@@ -164,20 +158,4 @@ RestartSec=3
 WantedBy=multi-user.target
 //file end
 
-//contents of etc/systemd/system/x10_monitor.service
-[Unit]
-Description=X10 Command Monitor
-After=network.target mysql.service
-
-[Service]
-Type=simple
-User=www-data
-Group=www-data
-ExecStart=/usr/bin/php /var/www/html/homeio/scripts/x10_monitor.php
-Restart=always
-RestartSec=3
-
-[Install]
-WantedBy=multi-user.target
-//file end
 
